# ChangeLog for app-text/ghostscript-gpl
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript-gpl/ChangeLog,v 1.109 2011/02/23 22:12:07 tgurr Exp $

*ghostscript-gpl-9.01 (23 Feb 2011)

  23 Feb 2011; Timo Gurr <tgurr@gentoo.org> -ghostscript-gpl-9.00.ebuild,
  +ghostscript-gpl-9.01.ebuild:
  Version bump, remove old.

*ghostscript-gpl-9.00-r1 (01 Feb 2011)

  01 Feb 2011; Timo Gurr <tgurr@gentoo.org> -ghostscript-gpl-8.71-r1.ebuild,
  +ghostscript-gpl-9.00-r1.ebuild:
  Revbump with upstream fixes, attempt to fix bug #223433. Remove old.

  07 Nov 2010; Jory A. Pratt <anarchy@gentoo.org>
  ghostscript-gpl-8.71-r1.ebuild, ghostscript-gpl-8.71-r6.ebuild,
  ghostscript-gpl-9.00.ebuild:
  Convert media-libs/jpeg to virtual/jpeg

  24 Oct 2010; Brent Baude <ranger@gentoo.org>
  ghostscript-gpl-8.71-r6.ebuild:
  Marking ghostscript-gpl-8.71-r6 ppc64 for bug 332061

  23 Oct 2010; Raúl Porcel <armin76@gentoo.org>
  ghostscript-gpl-8.71-r6.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #332061

  22 Oct 2010; Brent Baude <ranger@gentoo.org>
  ghostscript-gpl-8.71-r6.ebuild:
  Marking ghostscript-gpl-8.71-r6 ppc for bug 332061

  19 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  ghostscript-gpl-8.71-r6.ebuild:
  Stable on amd64 wrt bug #332061

  19 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  ghostscript-gpl-8.71-r6.ebuild:
  x86 stable wrt security bug #332061

  19 Oct 2010; Jeroen Roovers <jer@gentoo.org>
  ghostscript-gpl-8.71-r6.ebuild:
  Stable for HPPA (bug #332061).

*ghostscript-gpl-9.00 (07 Oct 2010)

  07 Oct 2010; Timo Gurr <tgurr@gentoo.org> +ghostscript-gpl-9.00.ebuild:
  Version bump.

*ghostscript-gpl-8.71-r6 (17 Aug 2010)

  17 Aug 2010; Timo Gurr <tgurr@gentoo.org> -ghostscript-gpl-8.71-r5.ebuild,
  +ghostscript-gpl-8.71-r6.ebuild:
  Revbump for CVE-2010-2055 wrt bug #332061. Remove old.

*ghostscript-gpl-8.71-r5 (30 Jul 2010)
